# game-engine

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  linter.sh  run-clang-format.py
.github/: pull_request_template.md
.github/workflows/: build.yaml  linter.yaml
ci/: linter.sh
docs/: CONTRIBUTING.md
include/engine/: engine.hpp  logger.hpp
include/engine/core/: resource.hpp  texture.hpp
include/engine/render/: manager.hpp  renderable.hpp
include/engine/util/: vec2.hpp
src/: main.cpp
src/engine/: engine.cpp
src/engine/core/: event.cpp  resource.cpp  texture.cpp
src/engine/render/: line.cpp  triangle.cpp
tests/: collision.cpp  sprite_layer.cpp
